fix: aligned error lists

--- a/private/djangocms-simple-admin.css
+++ b/private/djangocms-simple-admin.css
@@ -264,8 +264,16 @@ form button {
 
 .aligned label + p, .aligned label + div.help, .aligned label + div.readonly,
 form .aligned input + p.help, form .aligned textarea + p.help, form .aligned select + p.help,
-form .aligned input + div.help, form .aligned textarea + div.help, form .aligned select + div.help {
+form .aligned input + div.help, form .aligned textarea + div.help, form .aligned select + div.help,
+form .aligned input + p.help,
+form .aligned textarea + p.help,
+form .aligned select + p.help,
+form .aligned input + div.help,
+form .aligned textarea + div.help,
+form .aligned select + div.help,
+form .aligned ul {
     margin-left: 0;
+    padding-left: 0;
 }
 
 .button, input[type=submit], input[type=button], .submit-row input, a.button {
